syntax = "proto3";

package direktiv_flow;

option go_package = "github.com/vorteil/direktiv/pkg/flow/grpc";

import "pkg/flow/grpc/pagination.proto";

message Registry {
	string name = 1;
}

message RegistryEdge {
	Registry node = 1;
	string cursor = 2;
}

message Registries {
	int32 totalCount = 1;
	PageInfo pageInfo = 2;
	repeated RegistryEdge edges = 3;
}

message NamespaceRegistriesRequest {
	Pagination pagination = 1;
	string namespace = 2;
}

message NamespaceRegistriesResponse {
	string namespace = 1;
	Registries registries = 2;
}

message DeleteNamespaceRegistryRequest {
	string namespace = 1; 
	string registry = 2;
}

message SetNamespaceRegistryRequest {
	string namespace = 1; 
	string registry = 2;
	bytes data = 3;
}
