syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/direktiv/direktiv/pkg/functions/grpc";

import "pkg/functions/grpc/functions-common.proto";

message CancelWorkflowRequest {
	optional string ServiceName = 1;
	optional string ActionID = 2;
}
