syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/direktiv/direktiv/pkg/functions/grpc";

message Registry {
	optional string name = 1;
	optional string id = 2;
}

message GetRegistriesRequest {
	optional string namespace = 1;
	optional bool includeGlobal = 2;
}

message GetRegistriesResponse {
	repeated Registry registries = 1;
}
