syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

import "google/protobuf/empty.proto";

import "pkg/isolates/grpc/registries-get.proto";
import "pkg/isolates/grpc/registry-delete.proto";
import "pkg/isolates/grpc/registry-store.proto";

import "pkg/isolates/grpc/isolates-get.proto";
import "pkg/isolates/grpc/isolates-create.proto";
import "pkg/isolates/grpc/isolates-list.proto";
import "pkg/isolates/grpc/isolates-traffic.proto";
import "pkg/isolates/grpc/isolates-update.proto";
import "pkg/isolates/grpc/pod-create.proto";
import "pkg/isolates/grpc/pod-cancel.proto";
import "pkg/isolates/grpc/revision-delete.proto";

service IsolatesService {
  rpc UpdateIsolate(UpdateIsolateRequest) returns (google.protobuf.Empty)  {}
  rpc CreateIsolate(CreateIsolateRequest) returns (google.protobuf.Empty)  {}
  rpc DeleteIsolates(ListIsolatesRequest) returns (google.protobuf.Empty)  {}
  rpc ListIsolates(ListIsolatesRequest) returns (ListIsolatesResponse)  {}
  rpc GetIsolate(GetIsolateRequest) returns (GetIsolateResponse)  {}
  rpc DeleteIsolate(GetIsolateRequest) returns (google.protobuf.Empty)  {}
  rpc SetIsolateTraffic(SetTrafficRequest) returns (google.protobuf.Empty)  {}
	rpc StoreRegistry (StoreRegistryRequest) returns (google.protobuf.Empty) {}
  rpc GetRegistries (GetRegistriesRequest) returns (GetRegistriesResponse) {}
  rpc DeleteRegistry (DeleteRegistryRequest) returns (google.protobuf.Empty) {}
  rpc CreateIsolatePod(CreatePodRequest) returns (CreatePodResponse)  {}
  rpc CancelIsolatePod(CancelPodRequest) returns (google.protobuf.Empty)  {}
  rpc DeleteRevision(DeleteRevisionRequest) returns (google.protobuf.Empty)  {}
}
