syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message StoreRegistryRequest {
	optional string namespace = 1;
	optional string name = 2;
	optional bytes data = 3;
}
